--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
+bootJar {
+    baseName = 'rewardsCentral'
+    version =  '1.0.0'
+}
+
 repositories {
     mavenCentral()
     flatDir {
